Assertion failure in client_start on suspend
Note: This may be related to my P2P work, however, it does not look like it to me.
I ran into an assertion failure during suspending. This happened with 31f13acd with a number of further commits for my P2P work.
I do have some debug log information and also a GDB backtrace, not much more though unfortunately.
<debug> [1540861560.0655] sleep-monitor-sd: received SLEEP signal
<info> [1540861560.0655] manager: sleep: sleep requested (sleeping: no enabled: yes)
<debug> [1540861560.0656] manager: sleep: sleeping...
<debug> [1540861560.0656] manager: sleep: device enp0s31f6 has wake-on-lan, skipping
<debug> [1540861560.0657] device[0x810f10] (erspan0): unmanaged: flags set to [sleeping,by-default,!by-type,!platform-init,!user-settings=0x101/0x159/unmanaged], set-unmanaged [sleeping=0x1], reason sleeping)
<debug> [1540861560.0657] manager: sleep: device wlp4s0 has wake-on-lan, skipping
<debug> [1540861560.0657] device[0x8dc4c0] (p2p-dev-wlp4s0): unmanaged: flags set to [sleeping,!by-type,!platform-init,!user-explicit,!user-settings=0x1/0x79/unmanaged], set-unmanaged [sleeping=0x1], reason sleeping, transition-state)
<info> [1540861560.0658] device (p2p-dev-wlp4s0): state change: disconnected -> unmanaged (reason 'sleeping', sys-iface-state: 'managed')
<debug> [1540861560.0662] device[0x8dc4c0] (p2p-dev-wlp4s0): P2P: Releasing WPA supplicant interfaces.
<debug> [1540861560.0663] device[0x8dc4c0] (p2p-dev-wlp4s0): add_pending_action (1): 'waiting-for-supplicant'
<debug> [1540861560.0663] manager: ActivatingConnection now (none)
<info> [1540861560.0666] manager: NetworkManager state is now ASLEEP
<debug> [1540861560.0668] policy: re-enabling autoconnect for all connections
<debug> [1540861560.0669] sleep-monitor-sd: inhibit: dropping sleep inhibitor 19
<debug> [1540893667.9380] device[0x89d960] (wlp4s0): queued link change for ifindex 3
<debug> [1540893667.9383] device[0x89d960] (wlp4s0): queued IP4 config change
<debug> [1540893667.9384] device[0x89d960] (wlp4s0): queued IP6 config change
client_start: assertion 'client->state != state' failed
(gdb) bt full
#0 0x00007ffff7ccb3c5 in () at /home/benjamin/Projects/jhbuild/checkout/NetworkManager/_build/src/../../../../../../../../lib64/libglib-2.0.so.0
#1 0x00007ffff7ccc6fd in g_logv () at /home/benjamin/Projects/jhbuild/checkout/NetworkManager/_build/src/../../../../../../../../lib64/libglib-2.0.so.0
#2 0x00007ffff7ccc8d3 in g_log () at /home/benjamin/Projects/jhbuild/checkout/NetworkManager/_build/src/../../../../../../../../lib64/libglib-2.0.so.0
#3 0x00000000005e6482 in client_start (client=0x893e60, state=DHCP6_STATE_REBIND) at ../src/systemd/src/libsystemd-network/sd-dhcp6-client.c:1268
r = <optimized out>
timeout = <optimized out>
time_now = 8028144
time_string = "\225E_", '\000' <repeats 13 times>, "\023\000\000\000\000\000\000\000+Xi\000\000\000\000\000\345\066\000\000\000\000\000\000 \320\377\377\377\177\000\000\021\016_\000\000\000\000\000Pi\206\000\000\000\000"
lifetime_t1 = <optimized out>
lifetime_t2 = <optimized out>
__PRETTY_FUNCTION__ = "client_start"
__func__ = "client_start"
#4 0x00007fffffffd018 in ()
#5 0x00000000005db2ff in client_initialize_time_events (client=0x893e60) at ../src/systemd/src/libsystemd-network/sd-dhcp-client.c:1203
usec = 6186114
r = <optimized out>
__PRETTY_FUNCTION__ = "client_initialize_time_events"
__func__ = "client_initialize_time_events"
#6 0x0000000000600960 in shuffle_down (q=0x8913e0, idx=<optimized out>) at ../src/systemd/src/basic/prioq.c:142
j = 2
k = 6263712
s = 8994400
__PRETTY_FUNCTION__ = "shuffle_down"
__func__ = "shuffle_down"
idx = <optimized out>
__PRETTY_FUNCTION__ = "shuffle_down"
__func__ = "shuffle_down"
#7 0x0000000000840d10 in ()
#8 0x000000000060076c in shuffle_up (q=0x6, idx=8983520) at ../src/systemd/src/basic/prioq.c:99
k = 8994400
__PRETTY_FUNCTION__ = "shuffle_up"
__func__ = "shuffle_up"
#9 0x0000000000840d10 in ()
#10 0x0000000000866998 in ()
#11 0x00007fffffffd018 in ()
#12 0x0000000000600e92 in prioq_reshuffle (q=0x893e60, data=<optimized out>, idx=<optimized out>) at ../src/systemd/src/basic/prioq.c:260
i = <optimized out>
k = <optimized out>
__PRETTY_FUNCTION__ = "prioq_reshuffle"
__func__ = "prioq_reshuffle"
#13 0x0000000000893e60 in ()
#14 0x00007fffffffd020 in ()
#15 0x00007fffffffd018 in ()
#16 0x0000000000000002 in ()
#17 0x00000000005f93a0 in event_dispatch () at ../src/systemd/nm-sd.c:63
#18 0x00000000005e65c1 in client_timeout_t2 (s=<optimized out>, usec=<optimized out>, userdata=0x893e60) at ../src/systemd/src/libsystemd-network/sd-dhcp6-client.c:616
client = 0x893e60
__PRETTY_FUNCTION__ = "client_timeout_t2"
__func__ = "client_timeout_t2"
#19 0x000000000084f200 in ()
#20 0x00000000005f57ee in source_dispatch (s=0x893e60) at ../src/systemd/src/libsystemd/sd-event/sd-event.c:3054
saved_type = SOURCE_TIME_BOOTTIME
r = <optimized out>
__PRETTY_FUNCTION__ = "source_dispatch"
__func__ = "source_dispatch"
#21 0x0000000800000000 in ()
#22 0x00007ffff791acac in write () at /home/benjamin/Projects/jhbuild/checkout/NetworkManager/_build/src/../../../../../../../../lib64/libpthread.so.0
#23 0x000000000084f200 in ()
#24 0x0000000000866950 in ()
#25 0x0000000000000000 in ()
(gdb) quit